GPL/memory refactor, try to fix speech